[package]
name = "lang-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process = "2.3.0"
axum = { version = "0.7.6", features = ["macros"] }
dashmap = "6.1.0"
futures-util = "0.3.30"
serde = { version = "1.0.210", features = ["derive"] }
serde_bytes = "0.11.15"
tempfile = "3.12.0"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "signal"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
common = {path = "../common" }
serde_json = "1.0.128"
