[package]
name = "main-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"

async-process = "2.3.0"
axum = { version = "0.7.6", features = ["macros"] }
futures-util = "0.3.30"
serde = { version = "1.0.210", features = ["derive"] }
serde_bytes = "0.11.15"
sqlx = { version="0.8.2", features=["postgres", "runtime-tokio"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
